# model1

./: .gitignore  mlmodel.ipynb  pyproject.toml
