[project]
name = "model1"
version = "0.1.0"
description = ""
authors = [
    {name = "DINESH KUMAR",email = "dineshkumarvr41@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
